Day 2: Completed Admin Login and Security Config